<resources>
    <string name="app_name">Event Manager</string>
    <string name="add_event">ADD EVENT</string>
    <string name="show_events">SHOW EVENTS</string>
    <string name="event_name">Event name</string>
    <string name="description">Description</string>
    <string name="check_time_for_location">Check time for location</string>
    <string name="set_time">Set time</string>
    <string name="set_date">Set date</string>
    <string name="priority">Priority</string>
    <string name="url">URL</string>
    <string name="save_event">SAVE EVENT</string>
    <string name="events">Events</string>
</resources>