<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.view.activities.AddEventActivity">

    <EditText
        android:id="@+id/eventNameEtAddEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/event_name"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/eventDescEtAddEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:textColor="@color/white"
        android:hint="@string/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eventNameEtAddEvent"/>

    <Button
        android:id="@+id/checkTimeBtnAddEvent"
        android:layout_width="180dp"
        android:layout_height="90dp"
        android:layout_margin="15dp"
        style="@style/ButtonStyle"
        android:textAllCaps="false"
        android:textSize="12sp"
        android:text="@string/check_time_for_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eventDescEtAddEvent" />
    
    <AutoCompleteTextView
        android:id="@+id/autoCompleteTvAddEvent"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:popupBackground="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="@+id/checkTimeBtnAddEvent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/checkTimeBtnAddEvent" />

    <Button
        android:id="@+id/setTimeBtnAddEvent"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        style="@style/ButtonStyle"
        android:textAllCaps="false"
        android:textSize="12sp"
        android:text="@string/set_time"
        android:layout_margin="15dp"
        app:layout_constraintEnd_toEndOf="@+id/autoCompleteTvAddEvent"
        app:layout_constraintStart_toStartOf="@+id/autoCompleteTvAddEvent"
        app:layout_constraintTop_toBottomOf="@+id/autoCompleteTvAddEvent" />

    <Button
        android:id="@+id/setDateBtnAddEvent"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        style="@style/ButtonStyle"
        android:textAllCaps="false"
        android:textSize="12sp"
        android:text="@string/set_date"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="15dp"
        app:layout_constraintTop_toBottomOf="@id/checkTimeBtnAddEvent"/>

    <TextView
        android:id="@+id/priorityTvAddEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/priority"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/setDateBtnAddEvent" />

    <Spinner
        android:id="@+id/prioritySpinnerAddEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:popupBackground="@color/teal_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/priorityTvAddEvent" />

    <EditText
        android:id="@+id/urlEtAddEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/url"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prioritySpinnerAddEvent" />

    <Button
        android:id="@+id/saveEventBtnAddEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        style="@style/ButtonStyle"
        android:text="@string/save_event"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>